# personal_agent

./: .env.example  .gitignore  FEATURE.md  README.md  main.py  pyproject.toml
agent/: __init__.py  chat_agent.py  conversation_store.py  librechat_config.py  memory_store.py
docs/: ARCHITECTURE.md  FEATURES.md
gui/: __init__.py  chat_window.py
tests/: test_chat_agent_config.py  test_chat_agent_runtime.py  test_chat_window_logic.py  test_conversation_store.py  test_librechat_config.py  test_memory_store.py  test_settings_panel.py  test_worker_resilience.py
