[project]
name = "personal-agent"
version = "0.1.0"
description = "A personal agent GUI with multi-provider support"
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai-slim[openai,google,anthropic]>=1.90.0",
    "pydantic>=2.7.0",
    "PySide6>=6.6.0",
    "PyYAML>=6.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
personal-agent = "main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent", "gui"]
py-modules = ["main"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
